Changes in index Page and CSS Styling
Added a Line to the Index Page and changed some styling features in CSS file.

--- a/BSCS23031_index.html
+++ b/BSCS23031_index.html
@@ -31,6 +31,8 @@
             <br>
             My philosophy of life is that satisfication in life comes from satisfication only and it is upto the person that what satisfies him the most. 
             My satisfication comes from knowing that I have a good and honest character and just becoming the best version of myself.
+            <br>
+            Somthing interesting about me is that I can do a one leg squat.
         </p>
     </body>
 </html>
